convert review ratings to stars with raty jquery

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -12,10 +12,7 @@
   <% end %>
 
   <div class="field">
-    <div id="star-rating">
-      <%= f.label :rating %> <br>
-      <%= f.number_field :rating %>
-    </div>
+    <div id="star-rating"></div>
   </div>
   <div class="field">
     <%= f.label :comment %><br>
